[gd_scene load_steps=14 format=3 uid="uid://baa3b52h1gbic"]

[ext_resource type="Script" path="res://ScenarioScript/OptionSS/OptionsInterface.gd" id="1_cd81v"]
[ext_resource type="Texture2D" uid="uid://cb0cmffo2lvki" path="res://Assets/Scenarios/Menu/MenuBackground.png" id="2_sxujj"]
[ext_resource type="FontFile" uid="uid://dip2wk5qdyt6j" path="res://Assets/Font/Normal.TTF" id="3_skal4"]
[ext_resource type="AudioStream" uid="uid://c5euakdvxgsrm" path="res://Assets/Music/Buttons/ButtonPress.mp3" id="4_nl8t1"]
[ext_resource type="FontFile" uid="uid://bw2qtiom7ab4x" path="res://Assets/Font/Wide.TTF" id="5_p8elr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wfhvm"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l8bqx"]
bg_color = Color(0.294118, 0, 0, 0.784314)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a4wim"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sxts6"]
bg_color = Color(0.294118, 0, 0, 0.784314)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_12oen"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pyngq"]
bg_color = Color(0.294118, 0, 0, 0.784314)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fld67"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pbojt"]
bg_color = Color(0.294118, 0, 0, 0.784314)

[node name="OptionsInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cd81v")

[node name="MenuBackground" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1168.0
offset_bottom = 660.0
texture = ExtResource("2_sxujj")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 67.0
offset_top = -378.0
offset_right = 293.0
offset_bottom = -70.0
grow_vertical = 0
theme_override_constants/separation = 30
alignment = 1

[node name="MusicButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.454902, 0.454902, 0.454902, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_skal4")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_wfhvm")
theme_override_styles/hover = SubResource("StyleBoxFlat_l8bqx")
text = "Music"

[node name="VideoButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.454902, 0.454902, 0.454902, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_skal4")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_a4wim")
theme_override_styles/hover = SubResource("StyleBoxFlat_sxts6")
text = "Video"

[node name="LanguageButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.454902, 0.454902, 0.454902, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_skal4")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_12oen")
theme_override_styles/hover = SubResource("StyleBoxFlat_pyngq")
text = "Languages"

[node name="ReturnButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.454902, 0.454902, 0.454902, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_skal4")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_fld67")
theme_override_styles/hover = SubResource("StyleBoxFlat_pbojt")
text = "Return"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 34.0
offset_top = 20.0
offset_right = 557.0
offset_bottom = 100.0

[node name="GameTitle" type="Label" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_skal4")
theme_override_font_sizes/font_size = 70
text = "THE VESSEL BELOW"

[node name="MusicSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 295.0
offset_top = 307.0
offset_right = 493.0
offset_bottom = 335.0
min_value = -40.0
max_value = 0.0

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_nl8t1")
volume_db = -20.0

[node name="ResolutionText" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.031
anchor_top = 0.125
anchor_right = 1.031
anchor_bottom = 0.125
offset_left = -878.712
offset_top = 290.0
offset_right = -721.712
offset_bottom = 328.0
theme_override_fonts/font = ExtResource("5_p8elr")
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicPercent" type="Label" parent="."]
layout_mode = 2
offset_left = 349.0
offset_top = 282.0
offset_right = 439.0
offset_bottom = 305.0
theme_override_fonts/font = ExtResource("5_p8elr")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="LanguageChoise" type="Label" parent="."]
layout_mode = 0
offset_left = 298.0
offset_top = 450.0
offset_right = 470.0
offset_bottom = 473.0
theme_override_fonts/font = ExtResource("5_p8elr")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/MusicButton" to="." method="_on_music_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VideoButton" to="." method="_on_video_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LanguageButton" to="." method="_on_subtitles_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="value_changed" from="MusicSlider" to="." method="_on_music_slider_value_changed"]
